cmake_minimum_required (VERSION 3.20)

project (ex02)

# New CMake versions map C++20 to /std:c++20 instead of c++latest, so <format>
# and other unstable ABI features aren't supported. Use C++23 for such versions
if (MSVC AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.21)
    set(CMAKE_CXX_STANDARD 23)
else ()
    set(CMAKE_CXX_STANDARD 20)
endif ()

set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)

if (MSVC)
    add_compile_options (/W4 /permissive- /Zc:externConstexpr /Zc:inline)
endif ()

add_executable (${CMAKE_PROJECT_NAME} "src/main.cpp" "src/King.cpp" "src/Thief.cpp" "src/Mage.cpp" "src/Teleport.cpp" "src/Fire.cpp" "src/Wall.cpp" "src/Warrior.cpp" "include/Fire.h" "include/King.h" "src/Board.cpp" "include/Board.h" "src/DisplayObject.cpp" "include/DisplayObject.h" "src/Menu.cpp" "include/Menu.h"   "include/Mage.h" "include/Warrioir.h" "include/GameController.h" "src/GameController.cpp" "include/Thief.h" "include/Obstacle.h")

target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE $<$<CONFIG:DEBUG>:-fsanitize=address>)

add_subdirectory (include)
add_subdirectory (src)
add_subdirectory (resources)

set (SFML_STATIC_LIBRARIES TRUE)
set (SFML_DIR "C:/SFML/SFML-2.5.1/lib/cmake/SFML")

find_package (SFML 2.5 COMPONENTS graphics REQUIRED)

set_target_properties (sfml-main sfml-system sfml-window sfml-graphics sfml-audio sfml-network PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO RELEASE)

target_link_libraries (${CMAKE_PROJECT_NAME} sfml-graphics sfml-main)